<resources>
    <string name="app_name">MyIdealMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="welcome">Bienvenido</string>
    <string name="main_btn">Cerrar Sesion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_txt">Iniciar sesion</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btn">Entrar</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_txt">Registro de usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_age">Edad</string>
    <string name="register_ident">Numero de identificacion</string>
    <string name="register_btn">Registrar</string>
    <string name="login_regHere_txt">Registrar aqui</string>
</resources>
